@@ -24,6 +24,7 @@
   - Add --TEST_PO_MERGE to update_po for testing.
   - Added base_brand config option for brands to allow multiple base brands.
   - Fix startinglinenumber ignored & XML entites not being escaped. BZ #653432
+  - Added site config toc_type to allow selecting TOC styles.
 
 2.5  Fri Dec 02 2010 
   - Use SPEC_VERSION for splash page spec files
